# sql_llm

./: .gitignore  README.md  main.py  practice.ipynb  pyproject.toml  query_runner.py  requirements.txt
common_utils/: logging.py
config/: aws_configuration.py  configuration.py  gdrive_configuration.py
constants/: __init__.py  app_constant.py  data_costant.py  data_paths.py
downloads/: hello.txt
functions/: aws_funcs.py  dataloader.py  gdrive_funcs.py  gfunc.py
llm_code/: data_processor_and_loader.py  sql_gen_and_exec.py  streamlit_helper.py
llm_code/aws/: funcs.py  repository.py
llm_code/common_utils/: logging.py
llm_code/prompts/: new_testes_prompts.py  old_prompts.py
llm_code/settings/: __init__.py  data.py  llm.py  project.py
llm_code/utils/: decorators.py
notebooks/: practice.ipynb
src/connector_aws_gdrive/: aws_funcs.py  gdrive_funcs.py
src/constants/: __init__.py  app_constant.py  data_paths.py
src/llm_code/: comparision_query.py  contextual_query.py  data_processor_and_loader.py  single_query.py  sql_gen_and_exec.py  streamlit_helper.py
src/prompts/: prompt_examples.py  prompts.py
src/utils/: logging.py
